@@ -4,6 +4,7 @@ to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
 http://winmerge.org/tracker/[tracker-id]
 
 WinMerge 2.11.1.5
+  Use external editor to edit plugins (#2082774)
   Plugins: Show processing instructions in XML plugin (#1979321)
   BugFix: ClearCase checkout/commit dialog translation error (#2051069)
   BugFix: Table of Contents in manual (#2071625)
